# logtools

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.LICENSE  README.md  bootstrap.sh
doc/: Makefile.am  tailfd.8  tailfd.pod  tailfdx.8  tailfdx.pod  teepee.1  teepee.pod
example/: debug.tailfdx.conf  test.catter
src/: Makefile.am  config.h.in  tailfd.c  tailfdx.c  teepee.c
tools/: mkdist.sh  mkman.sh
